styles.css
/* ... */
/* Disable ugly boxes around images in IE10 */
a img{
  border: 0px;
}
/*========================================
=            Themed Selection            =
========================================*/

::-moz-selection {
  background-color: #271f43;
  color: #ee4543;
}


::selection {
  background-color: #271f43;
  color: #ee4543;
}

/*=====  End of Themed Selection  ======*/



.lnmhacks-search-box .mdl-textfield__input {
  color: rgba(0, 0, 0, 0.87);
}

.lnmhacks-header .mdl-menu__container {
  z-index: 50;
  margin: 0 !important;
}


.mdl-textfield--expandable {
  width: auto;
}

.lnmhacks-fab {
  position: absolute;
  right: 20%;
  bottom: -26px;
  z-index: 3;
  background: #64ffda !important;
  color: black !important;
}

.lnmhacks-mobile-title {
  display: none !important;
}


.lnmhacks-logo-image {
  height: 40px;
}


.lnmhacks-header {
  overflow: visible;
  background-color: white;
}

  .lnmhacks-header .material-icons {
    color: #767777 !important;
  }

  .lnmhacks-header .mdl-layout__drawer-button {
    background: transparent;
    color: #767777;
  }

  /*.lnmhacks-header .mdl-navigation__link {*/
nav {
  background-color: #aecde4 !important;
  box-shadow: 0px 0px 5px;
}

.nav-item a{
    color: #2b142c;
    font-weight: 700;
    font-size: 14px;
    letter-spacing: normal;
  }

  .lnmhacks-navigation-container {
    /* Simple hack to make the overflow happen to the left instead... */
    direction: rtl;
    -webkit-order: 1;
        -ms-flex-order: 1;
            order: 1;
    width: 500px;
    transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1),
        width 0.2s cubic-bezier(0.4, 0, 0.2, 1);
  }

  .lnmhacks-navigation {
    /* ... and now make sure the content is actually LTR */
    direction: ltr;
    -webkit-justify-content: flex-end;
        -ms-flex-pack: end;
            justify-content: flex-end;
    width: 800px;
  }

  .lnmhacks-search-box.is-focused + .lnmhacks-navigation-container {
    opacity: 0;
    width: 100px;
  }


  /*.lnmhacks-navigation .mdl-navigation__link {*/
.nav-item {
    display: inline-block;
    height: 60px;
    line-height: 65px;
    background-color: transparent !important;
    border-bottom: 4px solid transparent;
    padding: 0 24px;
  }

    /*.lnmhacks-navigation .mdl-navigation__link:hover {?*/
.nav-item:hover {
      border-bottom: 4px solid #2ec3db;
    }

  .lnmhacks-search-box {
    -webkit-order: 2;
        -ms-flex-order: 2;
            order: 2;
    margin-left: 16px;
    margin-right: 16px;
  }

  .lnmhacks-more-button {
    -webkit-order: 3;
        -ms-flex-order: 3;
            order: 3;
  }


.lnmhacks-drawer {
  border-right: none;
}

  .lnmhacks-drawer-separator {
    height: 1px;
    background-color: #dcdcdc;
    margin: 8px 0;
  }

  /*.lnmhacks-drawer .mdl-navigation__link.mdl-navigation__link {*/
.nav-item a{
    font-size: 14px;
    color: #2b142c;
  }

  /*.lnmhacks-drawer span.mdl-navigation__link.mdl-navigation__link {*/
.nav-item {
    /*color: #2ec3db;*/
  }

  .lnmhacks-drawer .mdl-layout-title {
    position: relative;
    background: #2ec3db;
    height: 160px;
  }

    .lnmhacks-drawer .lnmhacks-logo-image {
      position: absolute;
      bottom: 16px;
    }

.lnmhacks-be-together-section {
  position: relative;
  height: 600px;
  width: auto;
  background-color: #f3f3f3;
  background: url('images/website (1).png') center 30% no-repeat;
  background-size: cover;
}

.logo-font {
  font-family: 'Titillium Web', 'Helvetica', 'Arial', sans-serif;
  line-height: 1;
  color:#f44645;
  
  font-weight: 500;
}

.lnmhacks-slogan {
  font-size: 40px;
  font-weight:bold;
  padding-top: 20px;
}
.lnmhacks-logo{
  width:30em;
  margin-left:auto;
  margin-right:auto;
  padding-top:80px;
}
.lnmhacks-sub-slogan {
  font-size: 21px;
  padding-top: 24px;
}

.register-cta {
  font-size: 21px;
  padding-top: 100px;
}

  .register-cta a {
    text-decoration: none;
    color: #767777;
    font-weight: 300;
  }

.lnmhacks-footer__mobile{
  display: none !important;
}
.mobile-link{
  display: none !important;
}

.lnmhacks-screen-section {
  position: relative;
  padding-top: 60px;
}

.lnmhacks-screens {
  text-align: right;
  width: 100%;
  white-space: nowrap;
  overflow-x: auto;
}

.lnmhacks-screen {
  text-align: center;
}

.lnmhacks-screen .lnmhacks-link {
  margin-top: 16px;
  display: block;
  z-index: 2;
}

.lnmhacks-image-link {
  text-decoration: none;
}

.lnmhacks-wear {
  display: inline-block;
  width: 160px;
  margin-right: 32px;
}

  .lnmhacks-wear .lnmhacks-screen-image {
    width: 40%;
  }


.lnmhacks-phone {
  display: inline-block;
  width: 64px;
  margin-right: 48px;
}

  .lnmhacks-phone .lnmhacks-screen-image {
    width: 100%;
    z-index: 1;
  }


.lnmhacks-tablet {
  display: inline-block;
  width: 110px;
  margin-right: 64px;
}

  .lnmhacks-tablet .lnmhacks-screen-image {
    width: 100%;
    z-index: 1;
  }

  .lnmhacks-tablet .lnmhacks-link {
    display: block;
    z-index: 2;
  }


.lnmhacks-tv {
  display: inline-block;
  width: 300px;
  margin-right: 80px;
}

  .lnmhacks-tv .lnmhacks-screen-image {
    width: 100%;
    z-index: 1;
  }


.lnmhacks-auto {
  display: inline-block;
  width: 300px;
  overflow: hidden;
}

  .lnmhacks-auto .lnmhacks-screen-image {
    display: block;
    height: 300px;
    z-index: 1;
  }

.lnmhacks-wear-section {
      position: relative;
      /*background: url('images/wear.jpg');*/
      background: #fff;
      background-repeat: no-repeat;
      min-height: 300px;
    }

@media (max-width: 450px) {
    .content{
      left: 50% !important;
    }

    .lnmhacks-wear-section {
      position: relative;
      /*background: url('images/wear.jpg');*/
      background: #fff;
      background-repeat: no-repeat;
      min-height: 900px;
    }

    .lnmhack_3{
      width: 400px !important;
    }
}


.lnmhacks-wear-band {
  bottom: 0;
  width: 100%;
  text-align: center;
  background-color: #fff;
}
/* ... */

